multi-step-form-main/src/App.css
@font-face {
  font-family: "Ubuntu";
  src: local("Ubuntu"),
    url("/assets/fonts/Ubuntu-Regular.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Ubuntu";
  src: local("Ubuntu Medium"),
    url("/assets/fonts/Ubuntu-Medium.ttf") format("truetype");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Ubuntu";
  src: local("Ubuntu Bold"),
    url("/assets/fonts/Ubuntu-Bold.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

:root {
  --fw-normal: 400;
  --fw-medium: 500;
  --fw-bold: 700;
  /* Primary */

  --red: hsl(354, 84%, 57%);
  --blue-950: hsl(213, 96%, 18%);
  --blue-300: hsl(228, 100%, 84%);
  --blue-200: hsl(206, 94%, 87%);
  --purple-600: hsl(243, 100%, 62%);

  /* Neutral */

  --white: hsl(0, 100%, 100%);
  --blue-100: hsl(218, 100%, 97%);
  --blue-50: hsl(231, 100%, 99%);
  --purple-200: hsl(229, 24%, 87%);
  --grey: hsl(231, 11%, 63%);
}

/* CSS Reset Josh Comeau */
/* https://www.joshwcomeau.com/css/custom-css-reset/ */

/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
* {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

/* General Styles */

.sr-only,
legend {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.step-text-container {
  display: none;
}

body {
  min-height: 100dvh;
  background-color: var(--blue-100);
  font-family: Ubuntu;
  font-weight: 400;
}

h2,
label {
  color: var(--blue-950);
}

/* Grey is bad for color ratio */
p {
  font-weight: var(--fw-medium);
}

button {
  background-color: transparent;
  border-color: transparent;
  cursor: pointer;
}

button,
input,
label,
span {
  transition: outline 0.3s ease-in-out, outline-offset 0.3s ease-in-out;
}

button:focus,
button:hover {
  outline-offset: 0.25rem;
}

input:not(.toggle-input):checked ~ label,
input:not([type="radio"]):hover,
input:not([type="radio"]):focus,
input[type="radio"]:focus ~ label,
input[type="radio"]:hover ~ label,
input[type="checkbox"]:not(.toggle-input):focus ~ label,
input[type="checkbox"]:not(.toggle-input):hover ~ label {
  outline: solid 1px var(--blue-950);
}

input[type="checkbox"]:not(.toggle-input):checked:focus ~ label,
input[type="checkbox"]:not(.toggle-input):checked:hover ~ label,
input[type="radio"]:checked:focus ~ label,
input[type="radio"]:checked:hover ~ label {
  outline-offset: 0.25rem;
}

label {
  cursor: pointer;
}

label p:nth-of-type(1) {
  font-weight: var(--fw-bold);
}

label p:nth-of-type(2) {
  font-weight: var(--fw-medium);
}

label p:nth-of-type(3) {
  font-weight: var(--fw-normal);
}

label span {
  font-weight: var(--fw-bold);
}

fieldset,
.step-4,
.step-5 {
  background-color: white;
  max-width: 63.75rem;
  width: 90%;
  border-color: transparent;
  margin-top: -4.25rem;
  margin-inline: auto;
  padding: 2rem;
  border-radius: 0.5rem;
}

/* Top Step Navigation Buttons */

.side-step-buttons {
  display: flex;
  justify-content: center;
  gap: 1rem;
  padding: 5rem;
  background: url("/assets/images/bg-sidebar-mobile.svg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.side-step-buttons div {
  margin-block-start: -3rem;
}

.side-step-buttons button {
  border-radius: 100%;
  width: 2rem;
  aspect-ratio: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  outline: 1px solid white;
}

.side-step-active {
  background-color: var(--blue-200);
  color: var(--blue-950);
  font-weight: var(--fw-bold);
}

.side-step-passive {
  color: var(--white);
}

/* Bottom Step Navigation Buttons */

.step-buttons {
  position: absolute;
  bottom: 0;
  width: 100%;
  background-color: white;
  padding: 1rem;
}

.step-buttons button {
  padding: 0.5rem;
  border-radius: 0.25rem;
  font-weight: var(--fw-medium);
  transition: scale 0.3s ease-in-out;
}

.step-buttons button:nth-of-type(2) {
  background-color: var(--blue-50);
}

.step-buttons button:nth-of-type(1) {
  float: right;
  background-color: var(--blue-950);
  color: var(--blue-100);
}

.step-buttons button.confirm {
  background-color: var(--purple-600);
}

.step-buttons button:hover {
  scale: 1.1;
}

/* Steps */

/* Step 1 */

.step-1-input-container {
  display: flex;
  flex-direction: column-reverse;
  margin-block: 1rem;
}

.step-1 input {
  padding: 0.5rem 1rem;
  border: transparent;
  outline: solid 1px var(--purple-200);
  border-radius: 0.25rem;
}

.step-1 label {
  font-size: 0.875rem;
}

input::placeholder {
  font-weight: var(--fw-bold);
  color: var(--grey);
}

.step-1 label {
  display: flex;
  justify-content: space-between;
}

.err-msg {
  opacity: 0;
  color: var(--red);
  transition: opacity 0.3s ease-in-out;
}

.step-1 input:not(:focus):not(:placeholder-shown):invalid {
  outline-color: var(--red);
}

.step-1 input:not(:focus):not(:placeholder-shown):invalid ~ label .err-msg {
  opacity: 1;
}

/* Step 2 */

.step-2 label {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  margin-block: 1rem;
  padding: 1rem;
  min-height: 6.5rem;
}

.step-2 label p:not(:nth-child(1)) {
  font-size: 0.875rem;
}

.step-2 label p:nth-child(2) {
  font-weight: var(--fw-bold);
}

.plan-input ~ label {
  outline: solid 1px var(--purple-200);
  border-radius: 0.25rem;
}

.step-2 span {
  color: var(--grey);
}
.toggle-input:not(:checked):hover ~ label span:nth-of-type(2),
.toggle-input:not(:checked):focus ~ label span:nth-of-type(2) {
  outline: solid 1px var(--blue-950);
  outline-offset: 2px;
}
.toggle-input:checked:hover ~ label span:nth-of-type(1),
.toggle-input:checked:focus ~ label span:nth-of-type(1) {
  outline: solid 1px var(--blue-950);
  outline-offset: 2px;
}

/* Toggle Switch */

.toggle-label {
  width: fit-content;
  margin-inline: auto;
  justify-content: center;
  align-items: center;
  transition: outline-color 0.3s ease-in-out;
}

.toggle-bar {
  height: 1.5rem;
  width: 3rem;
  border-radius: 999px;
  background-color: var(--blue-950);
  position: relative;
}

.toggle-button {
  position: absolute;
  top: 50%;
  left: calc(0% + 0.125rem);
  transform: translateY(-50%);
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  background-color: var(--blue-50);
  transition: transform 0.3s ease-in-out;
}

.toggle-input:checked ~ label .toggle-button {
  transform: translateX(calc(100% + 0.25rem)) translateY(-50%);
}

.toggle-input:not(:checked) ~ label span:nth-of-type(1) {
  color: var(--blue-950);
}

.toggle-input:checked ~ label span:nth-of-type(2) {
  color: var(--blue-950);
}

/* Step 3 */

.step-3 label {
  display: flex;
  align-items: center;
  gap: 1rem;
  margin-block: 1rem;
  padding: 0.75rem 1rem;
  outline: solid 1px var(--purple-200);
  border-radius: 0.25rem;
  font-size: 0.875rem;
}

.checkmark {
  border-radius: inherit;
  height: 1.25rem;
  aspect-ratio: 1;
  outline: solid 1px var(--purple-200);
  align-content: center;
  justify-items: center;
}

.checkmark img {
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
}

.step-3-price {
  margin-left: auto;
}

.addon-input:checked ~ label .checkmark {
  background-color: var(--purple-600);
}

.addon-input:checked ~ label img {
  opacity: 1;
}

.step-3 label p:nth-child(3) {
  color: var(--purple-600);
  font-weight: var(--fw-normal);
}

/* Step 4 */

.step-4-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  background-color: var(--blue-100);
  margin-block: 2rem;
  border-radius: 0.5rem;
  padding: 1rem;
}

.addon-container {
  color: var(--blue-950);
}

.step-4-plan {
  border-bottom: 1px solid var(--purple-200);
  padding-bottom: 0.75rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.step-4-button {
  text-decoration: underline;
  background-color: transparent;
  padding: 0;
  transition: scale 0.3s ease-in-out;
}
.step-4-button:hover {
  scale: 1.1;
}

.step-4-addon,
.step-4-total {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.step-4-total {
  padding-inline: 1rem;
}

.total-price {
  color: var(--purple-600);
  font-weight: var(--fw-bold);
}

/* Step 5 */

.step-5 {
  text-align: center;
}

.step-5 h2 {
  margin-block: 1rem;
}

.step-5 img {
  margin-inline: auto;
  scale: 0.75;
}

@media screen and (min-width: 50rem) {
  /* General Styles */

  body {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  form {
    position: relative;
    display: flex;
    background-color: var(--blue-50);
    padding: 1rem;
    border-radius: 0.5rem;
    min-height: 35rem;
    min-width: 48rem;
  }

  fieldset,
  .step-4,
  .step-5 {
    margin-top: 0;
  }

  /* Top Step Navigation Buttons */

  .button-container {
    display: flex;
    align-items: center;
    gap: 1rem;
  }

  .side-step-buttons {
    display: block;
    padding: 1rem;
    min-width: 12.5rem;
    background: url("/assets/images/bg-sidebar-desktop.svg");
    border-radius: inherit;
    background-position: center;
    background-size: cover;
  }

  .side-step-buttons div {
    margin-block: 0.25rem;
  }

  .step-text-container {
    display: inline-block;
  }

  .step-text-container p:nth-of-type(1) {
    color: var(--blue-300);
    font-weight: var(--fw-normal);
  }

  .step-text-container p:nth-of-type(2) {
    color: var(--purple-200);
    font-weight: var(--fw-bold);
  }

  /* Bottom Step Navigation Buttons */

  .step-buttons {
    right: 0;
    width: 70%;
  }

  /* Step 2 */

  .plan-container {
    display: flex;
    justify-content: center;
    gap: 2rem;
  }

  .step-2 label:not(.toggle-label) {
    display: flex;
    flex-direction: column;
    min-width: 8rem;
    min-height: 10rem;
  }

  /* Step 5 */

  .last-step {
    display: flex;
    background-color: white;
    max-width: 63.75rem;
    width: 90%;
    margin-inline: auto;
    padding: 1rem;
    border-radius: 0.5rem;
    min-height: 30rem;
    min-width: 48rem;
  }

  .step-5 {
    align-content: center;
  }
}

